--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,23 @@
 ---
 
 @import 'lewismiddleton/cayman-dark';
+
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+.progress-bar {
+  height: 8px;
+  background: #04AA6D;
+  width: 0%;
+}
