--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,7 +3,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #f1f1f1;
 }
 
 .progress-container {
@@ -14,6 +13,6 @@
 
 .progress-bar {
   height: 8px;
-  background: #04AA6D;
+  background: #00c77e;
   width: 0%;
 }
