--- a/css/style2.css
+++ b/css/style2.css
@@ -8,11 +8,15 @@
 .progress-container {
   width: 100%;
   height: 8px;
-  background: #ccc;
+  background: #181a1b;
 }
 
 .progress-bar {
   height: 8px;
   background: #00c77e;
   width: 0%;
+}
+
+body {
+  background-color: #181a1b;
 }
