--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,12 @@
       {% endif %}
     </header>
 
+    <div class="progressionbar">
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>  
+    </div>
+    
     <main id="content" class="main-content" role="main">
       {{ content }}
 
@@ -50,5 +56,6 @@
         {% endif %}
       </footer>
     </main>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
