--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,6 @@
         {% endif %}
       </footer>
     </main>
-    <script src="../scripts/script.js"></script>
+    <script src="../script/script.js"></script>
   </body>
 </html>
