--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -29,8 +29,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name"><img src="img/logo.svg" width="400"></h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
+      <h2 class="project-tagline">Resource Pack
         <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
       {% endif %}
     </header>
