--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -29,7 +29,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name"><img src="img/logo.svg" width="400"></h1>
-      <h2 class="project-tagline">Resource Pack
+      <h2 class="project-tagline">Resource Pack</h2>
         <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
       {% endif %}
     </header>
