--- a/css/style2.css
+++ b/css/style2.css
@@ -16,3 +16,9 @@
   background: #00c77e;
   width: 0%;
 }
+
+@media only screen and (max-width: 999px) {
+<header class="page-header" role="banner">
+      <h1 class="project-name"><img src="img/logo.svg" width="400"></h1>
+</header>
+}
