--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -11,6 +11,7 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/styleCotCot.css?v=">
     <link rel="stylesheet" href="../css/style2.css?v=">
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
