--- a/css/styleCotCot.css
+++ b/css/styleCotCot.css
@@ -12,7 +12,7 @@ body {
 .progress-container {
   width: 100%;
   height: 8px;
-  background: #252b25;
+  background: #0d1117;
 }
 
 .progress-bar {
