--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #0d1117;
+}
+
 .progressionbar {
   position: fixed;
   top: 0;
@@ -8,7 +12,7 @@
 .progress-container {
   width: 100%;
   height: 8px;
-  background: #181a1b;
+  background: #0d1117;
 }
 
 .progress-bar {
