--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -11,6 +11,14 @@
   width: 0%;
 }
 
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+}
+
 
 
 .checkmark {
