--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -11,14 +11,17 @@
   width: 0%;
 }
 
-
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+}
 
 .container input {
   position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+
 }
 
 .checkmark {
