--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name"><img src="img/logo.png" width="320"></h1>
+      <h1 class="project-name"><img src="../img/logo.png" width="320"></h1>
        <h2 class="project-tagline">Resource Pack</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
