--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -11,7 +11,7 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/styleCotCot.css?v=">
+    <link rel="stylesheet" href="../../css/styleCotCot.css?v=">
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
