--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -47,6 +47,6 @@
         {% endif %}
       </footer>
     </main>
-    <script src="../script/script.js"></script>
+    <script src="../../script/script.js"></script>
   </body>
 </html>
