--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -11,7 +11,7 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/styleOpti.css?v=">
+    <link rel="stylesheet" href="../../css/styleOpti.css?v=">
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
@@ -47,6 +47,6 @@
         {% endif %}
       </footer>
     </main>
-    <script src="../script/script.js"></script>
+    <script src="../../script/script.js"></script>
   </body>
 </html>
