--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
       </script>
     {% endif %}
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../css/styleCotCot.css?v=">
     {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
@@ -41,5 +42,6 @@
         {% endif %}
       </footer>
     </main>
+    <script src="../../script/script.js"></script>
   </body>
 </html>
