--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,11 @@
         <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
       {% endif %}
     </header>
+    <div class="progressionbar">
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>  
+    </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
       <footer class="site-footer">
