--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: "PouletEnSlip" | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">PouletEnSlip</h1>
+      <h2 class="project-tagline">Personal Website</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
       {% endif %}
