--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="en-US">
   <head>
+    <title>CotCotPack | PouletEnSlip</title>
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
       <script>
