--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -35,7 +35,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 <div id="scrollUp">
-<a href="#top"><img src="https://github.com/PouletEnSlip/pouletenslip.github.io/blob/main/pages/img/top.svg"/></a>
+<a href="#top"><img src="../pages/img/top.svg"/></a>
 </div>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
