--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -35,7 +35,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 <div id="scrollUp">
-<a href="#top"><img src="../img/top.png"/></a>
+<a href="#top"><img style="width:50px" src="../img/top.png"/></a>
 </div>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
