--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -61,9 +61,20 @@
   width: 0%;
 }
 
-#scrollUp {
+.top {
   position: fixed;
-  bottom : 10px;
-  right: -100px;
-  opacity: 0.8;
+  bottom: 10px;
+  right: 10px;
+  width: 65px;
+  height: 65px;
+  font-size: 40px;
+  color: white;
+  background-color: rgb(0, 89, 255);
+  border: none;
+  border-radius: 10px;
+  transition: background-color 0.3s ease 0s;
+}
+.top:hover {
+  background-color: rgb(71, 135, 255);
+  transition: background-color 0.3s ease 0s;
 }
