--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -69,6 +69,7 @@
   height: 55px;
   font-size: 40px;
   font-family: Arial;
+  padding:0.5em
   color: white;
   background-color: rgb(13, 109, 182);
   border: none;
