--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -67,9 +67,9 @@
   right: 10px;
   width: 55px;
   height: 55px;
-  font-size: 40px;
+  font-size: 50px;
   font-family: Arial;
-  padding:0.5em
+  padding: 1em;
   color: white;
   background-color: rgb(13, 109, 182);
   border: none;
