--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="fr">
   <head>
     <title>Opti Windows | PouletEnSlip</title>
     <meta charset="UTF-8">
