--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -32,7 +32,7 @@
     </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
-      <a href="#"><button class="top">^</button></a>
+      <a href="#"><button class="top">↑</button></a>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
