--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>Opti Windows | PouletEnSlip</title>
+    <title>Optimisation | PouletEnSlip</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../css/styleOpti.css?v=">
     {% seo %}
