--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -21,9 +21,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name"><img src="../img/logo.png" width="320"></h1>
        <h2 class="project-tagline">Resource Pack</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
-      {% endif %}
+        <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
       <div class="progress-container">
@@ -33,9 +31,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       <footer class="site-footer">
-        {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
+          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/CotCotPack">CotCotPack</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a></span>
       </footer>
     </main>
     <script src="../../script/script.js"></script>
