--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">PouletEnSlip</h1>
       <h2 class="project-tagline">Personal Website</h2>
-        <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
+        <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
       <div class="progress-container">
