--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -21,9 +21,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">Optimiser Windows</h1>
       <h2 class="project-tagline">Guide fiable et à jour</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">My GitHub</a>
-      {% endif %}
+        <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
       <div class="progress-container">
@@ -34,9 +32,7 @@
       {{ content }}
       <a href="#"><button class="top">^</button></a>
       <footer class="site-footer">
-        {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
+          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/Opti">opti</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a></span>
       </footer>
     </main>
     <script src="../../script/script.js"></script>
