--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -31,7 +31,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       <footer class="site-footer">
-          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/CotCotPack">CotCotPack</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a></span>
+          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/CotCotPack">CotCotPack</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
     </main>
     <script src="../../script/script.js"></script>
