--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -32,7 +32,7 @@
       {{ content }}
       <a href="#"><button class="top">^</button></a>
       <footer class="site-footer">
-          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/Opti">opti</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a></span>
+          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/Opti">opti</a> is maintained by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
     </main>
     <script src="../../script/script.js"></script>
