--- a/css/styleOpti.css
+++ b/css/styleOpti.css
@@ -61,7 +61,7 @@
   width: 0%;
 }
 
-.top {
+#top {
   position: fixed;
   bottom: 15px;
   right: -100px;
@@ -75,7 +75,7 @@
   transition: background-color 0.2s ease 0s;
 }
 
-.top:hover {
+#top:hover {
   background-color: rgba(70, 150, 210, 0.7);
   transition: background-color 0.2s ease 0s;
 }
