--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -30,7 +30,9 @@
     </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
-      <a href="#"><button id="top">^</button></a>
+      <div id="top">
+        <a href="#"><button id="btnTop">^</button></a>
+      </div>
       <footer class="site-footer">
           <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/Opti">Opti</a> by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
