--- a/css/styleDefault.css
+++ b/css/styleDefault.css
@@ -10,3 +10,22 @@
   background: #00c77e;
   width: 0%;
 }
+
+#btnTop {
+  position: fixed;
+  bottom: 15px;
+  right: -100px;
+  width: 55px;
+  height: 55px;
+  font-size: 42px;
+  color: white;
+  background-color: rgba(13, 109, 182, 0.7);
+  border: none;
+  border-radius: 10px;
+  transition: background-color 0.2s ease 0s;
+}
+
+#btnTop:hover {
+  background-color: rgba(70, 150, 210, 0.7);
+  transition: background-color 0.2s ease 0s;
+}
