--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -29,6 +29,7 @@
     </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
+      <a href="#"><button id="btnTop">^</button></a>
       <footer class="site-footer">
           <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/CotCotPack">CotCotPack</a> by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
