--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -1,21 +1,20 @@
 @import "normalize";
-@import "variables";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 @mixin large {
-  @media screen and (min-width: #{$large-breakpoint}) {
+  @media screen and (min-width: 64em) {
     @content;
   }
 }
 
 @mixin medium {
-  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
+  @media screen and (min-width: 42em) and (max-width: 64em) {
     @content;
   }
 }
 
 @mixin small {
-  @media screen and (max-width: #{$medium-breakpoint}) {
+  @media screen and (max-width: 42em) {
     @content;
   }
 }
@@ -30,7 +29,7 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: $body-text-color;
+  color: #606c71;
 }
 
 #skip-to-content {
@@ -46,13 +45,13 @@ body {
     left: 10px;
     height: auto;
     width: auto;
-    background: invert($body-link-color);
-    outline: thick solid invert($body-link-color);
+    background: invert(#1e6bb8);
+    outline: thick solid invert(#1e6bb8);
   }
 }
 
 a {
-  color: $body-link-color;
+  color: #1e6bb8;
   text-decoration: none;
 
   &:hover {
@@ -105,10 +104,10 @@ a {
 }
 
 .page-header {
-  color: $header-heading-color;
+  color: #fff;
   text-align: center;
-  background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-color: #159957;
+  background-image: linear-gradient(120deg, #155799, #159957);
 
   @include large {
     padding: 5rem 6rem;
@@ -209,7 +208,7 @@ a {
     margin-top: 2rem;
     margin-bottom: 1rem;
     font-weight: normal;
-    color: $section-headings-color;
+    color: #159957;
   }
 
   p {
@@ -220,8 +219,8 @@ a {
     padding: 2px 4px;
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 0.9rem;
-    color: $code-text-color;
-    background-color: $code-bg-color;
+    color: #567482;
+    background-color: #f3f6fa;
     border-radius: 0.3rem;
   }
 
@@ -230,17 +229,17 @@ a {
     margin-top: 0;
     margin-bottom: 1rem;
     font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    color: $code-text-color;
+    color: #567482;
     word-wrap: normal;
-    background-color: $code-bg-color;
-    border: solid 1px $border-color;
+    background-color: #f3f6fa;
+    border: solid 1px #dce6f0;
     border-radius: 0.3rem;
 
     > code {
       padding: 0;
       margin: 0;
       font-size: 0.9rem;
-      color: $code-text-color;
+      color: #567482;
       word-break: normal;
       white-space: pre;
       background: transparent;
@@ -293,8 +292,8 @@ a {
   blockquote {
     padding: 0 1rem;
     margin-left: 0;
-    color: $blockquote-text-color;
-    border-left: 0.3rem solid $border-color;
+    color: #819198;
+    border-left: 0.3rem solid #dce6f0;
 
     > :first-child {
       margin-top: 0;
@@ -320,7 +319,7 @@ a {
     th,
     td {
       padding: 0.5rem 1rem;
-      border: 1px solid $table-border-color;
+      border: 1px solid #e9ebec;
     }
   }
 
@@ -344,7 +343,7 @@ a {
     height: 2px;
     padding: 0;
     margin: 1rem 0;
-    background-color: $hr-border-color;
+    background-color: #eff0f1;
     border: 0;
   }
 }
@@ -352,7 +351,7 @@ a {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
-  border-top: solid 1px $hr-border-color;
+  border-top: solid 1px #eff0f1;
 
   @include large {
     font-size: 1rem;
@@ -373,5 +372,5 @@ a {
 }
 
 .site-footer-credits {
-  color: $blockquote-text-color;
+  color: #819198;
 }
