--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <title>Optimisation | PouletEnSlip</title>
-    {% seo %}
+    <meta name="description" content="Guide fiable et à jour">
+    <meta name=”robots” content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
