--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>CotCotPack | PouletEnSlip</title>
-    {% seo %}
+    <meta name="description" content="Resource Pack">
+    <meta name=”robots” content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
