--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <title>PouletEnSlip</title>
     <meta name="description" content="Personal Website">
+    <meta name="og:title" property="og:title" content="PouletEnSlip">
     <meta name=”robots” content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
