--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -3,6 +3,7 @@
   <head>
     <title>CotCotPack | PouletEnSlip</title>
     <meta name="description" content="Resource Pack">
+    <meta name="og:title" property="og:title" content="CotCotPack | PouletEnSlip">
     <meta name=”robots” content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
