--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -3,6 +3,7 @@
   <head>
     <title>Optimisation | PouletEnSlip</title>
     <meta name="description" content="Guide fiable et à jour">
+    <meta name="og:title" property="og:title" content="Optimisation | PouletEnSlip">
     <meta name=”robots” content="index, follow">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
