--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>PouletEnSlip</title>
-    <meta name="description" content="Personal Website">
-    <meta name="og:title" property="og:title" content="PouletEnSlip">
-    <meta name="robots" content="index, follow">
+    <title>PouletEnSlip | Personal Website</title>
+    <meta name="description" content="PouletEnSlip's personal website where you can find all his projects.">
+    <meta name="application-name" content="PouletEnSlip | Personal Website">
+    <meta name="author" content="PouletEnSlip">
+    <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PouletEnSlip | Personal Website">
+    <meta property="og:description" content="PouletEnSlip's personal website where you can find all his projects.">
+    <meta property="og:site_name" content="PouletEnSlip | Personal Website">
+    <meta property="og:url" content="https://pouletenslip.github.io/">
+    <meta property="og:image" content="https://leosgn.alwaysdata.net/favicon.ico">
+    <meta property="og:locale" content="en">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pouletenslip.github.io/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {% unless page.light_mode %}
