--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <title>CotCotPack | PouletEnSlip</title>
-    <meta name="description" content="Resource Pack">
-    <meta name="og:title" property="og:title" content="CotCotPack | PouletEnSlip">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="CotCotPack is a Minecraft resource pack.">
+    <meta name="application-name" content="CotCotPack | PouletEnSlip">
+    <meta name="author" content="PouletEnSlip">
+    <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CotCotPack | PouletEnSlip">
+    <meta property="og:description" content="CotCotPack is a Minecraft resource pack.">
+    <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
+    <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
+    <meta property="og:image" content="https://leosgn.alwaysdata.net/favicon.ico">
+    <meta property="og:locale" content="en">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pouletenslip.github.io/pages/cotcotpack/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {% unless page.light_mode %}
