--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <title>Optimisation | PouletEnSlip</title>
-    <meta name="description" content="Guide fiable et à jour">
-    <meta name="og:title" property="og:title" content="Optimisation | PouletEnSlip">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="Guide fiable et à jour pour optimiser Windows.">
+    <meta name="application-name" content="Optimisation | PouletEnSlip">
+    <meta name="author" content="PouletEnSlip">
+    <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Optimisation | PouletEnSlip">
+    <meta property="og:description" content="Guide fiable et à jour pour optimiser Windows.">
+    <meta property="og:site_name" content="Optimisation | PouletEnSlip">
+    <meta property="og:url" content="https://pouletenslip.github.io/pages/opti/">
+    <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
+    <meta property="og:locale" content="en">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://pouletenslip.github.io/pages/opti/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {% unless page.light_mode %}
