--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="CotCotPack is a Minecraft resource pack.">
     <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
-    <meta property="og:image" content="https://leosgn.alwaysdata.net/favicon.ico">
+    <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta property="og:locale" content="en">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/cotcotpack/">
