--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="PouletEnSlip's personal website where you can find all his projects.">
     <meta property="og:site_name" content="PouletEnSlip | Personal Website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
-    <meta property="og:image" content="https://leosgn.alwaysdata.net/favicon.ico">
+    <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta property="og:locale" content="en">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/">
