--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-FR">
   <head>
     <title>Optimisation | PouletEnSlip</title>
     <meta name="description" content="Guide fiable et à jour pour optimiser Windows.">
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="Optimisation | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/opti/">
     <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
-    <meta property="og:locale" content="en">
+    <meta property="og:locale" content="fr-FR">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/opti/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
