--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -7,7 +7,7 @@
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="CotCotPack | PouletEnSlip">
     <meta property="og:description" content="CotCotPack is a Minecraft resource pack.">
