--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="PouletEnSlip | Personal Website">
     <meta property="og:description" content="PouletEnSlip's personal website where you can find all his projects.">
