--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -7,7 +7,7 @@
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Optimisation | PouletEnSlip">
     <meta property="og:description" content="Guide fiable et à jour pour optimiser Windows.">
