--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>PouletEnSlip | Personal Website</title>
-    <meta name="description" content="PouletEnSlip's personal website where you can find all his projects.">
+    <meta name="description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects.">
     <meta name="application-name" content="PouletEnSlip | Personal Website">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
@@ -10,11 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="PouletEnSlip | Personal Website">
-    <meta property="og:description" content="PouletEnSlip's personal website where you can find all his projects.">
+    <meta property="og:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects.">
     <meta property="og:site_name" content="PouletEnSlip | Personal Website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
     <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta property="og:locale" content="en">
+    <meta name="twitter:title" content="PouletEnSlip | Personal Website">
+    <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects.">
+    <meta name="twitter:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
