--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -220,7 +220,7 @@ a {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 0.9rem;
     color: #567482;
-    background-color: #f3f6fa;
+    background-color: #9dbce5;
     border-radius: 0.3rem;
   }
 
@@ -231,7 +231,7 @@ a {
     font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
     color: #567482;
     word-wrap: normal;
-    background-color: #f3f6fa;
+    background-color: #9dbce5;
     border: solid 1px #dce6f0;
     border-radius: 0.3rem;
 
