--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -84,3 +84,7 @@
   background-color: rgba(70, 150, 210, 0.7);
   transition: background-color 0.2s ease 0s;
 }
+
+#label1:checked + #input1 {
+  text-decoration: line-through;
+}
