--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,12 +47,12 @@
 }
 
 .container .checkmark:after {
-  left: 5px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
+  left: 7px;
+  top: 3px;
+  //width: 5px;
+  //height: 10px;
+  //border: solid white;
+  //border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
 
