--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,8 +51,8 @@
   top: 3px;
   width: 5px;
   height: 10px;
-  //border: solid white;
-  //border-width: 0 3px 3px 0;
+  border: solid white;
+  border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
 
