--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,8 +6,8 @@
 .container {
   display: block;
   position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+  padding-left: 30px;
+  //margin-bottom: 12px;
   cursor: pointer;
 }
 
