--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@ input[type=checkbox]:checked:after {
 .label-for-check:hover {
 	cursor: pointer;
 	padding-left: 25px;
+	position: relative;
 }
 
 .check-with-label:checked + .label-for-check {
