--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,7 @@ input[type=checkbox]:checked:after {
 	width: 5px;
 	height: 10px;
 	border: solid black;
-	border-width: 2px 2px 2px 2px;
+	border-width: 0 2px 2px 0;
 	transform: rotate(45deg);
 	top: 2px;
 	left: 6px;
