--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>CotCotPack | PouletEnSlip</title>
-    <meta name="description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java and Bedrock.">
+    <meta name="description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java.">
     <meta name="application-name" content="CotCotPack | PouletEnSlip">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="CotCotPack | PouletEnSlip">
-    <meta property="og:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java and Bedrock.">
+    <meta property="og:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java.">
     <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
     <meta property="og:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta property="og:locale" content="en">
     <meta name="twitter:title" content="CotCotPack | PouletEnSlip">
-    <meta name="twitter:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java and Bedrock.">
+    <meta name="twitter:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java.">
     <meta name="twitter:image" content="https://pouletenslip.github.io/favicon.ico">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/cotcotpack/">
@@ -32,7 +32,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name"><img src="./img/logo.png" width="320"></h1>
-       <h2 class="project-tagline">Resource Pack</h2>
+       <h2 class="project-tagline">Minecraft Resource Pack</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
